Add opens for ClassLoaderUtils used in tests